@startuml

title __JOUEURS's Class Diagram__\n

  namespace joueurs {
    class joueurs.Bot {
        + Bot()
        + abandonne()
        + estHumain()
        + joueUnTour()
    }
  }
  

  namespace joueurs {
    class joueurs.Humain {
        - abandonne : boolean
        + Humain()
        + abandonne()
        + estHumain()
        + joueUnTour()
        - abandon()
        - propositionNulle()
    }
  }
  

  namespace joueurs {
    abstract class joueurs.Joueur {
        - echecEtMat : boolean
        - nom : String
        - pieces : ArrayList<IPiece>
        + aPerdu()
        + déplacer()
        + getCouleur()
        + getNom()
        + getPieces()
        + isChessMat()
        + leRoi()
        # Joueur()
    }
  }
  

  joueurs.Bot -up-|> joueurs.Joueur
  joueurs.Humain -up-|> joueurs.Joueur
  joueurs.Joueur .up.|> echiquier.IJoueur
  joueurs.Joueur o-- piece.CouleurPiece : couleur


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
